istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nodejs-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - nodejs-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nodejs-service
        port:
          number: 80
